lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:7: error: type mismatch;
 found   : Int
 required: lessons.lander.universe.Point
			Segment(0)=i
                                   ^Lander:8: error: type mismatch;
 found   : Int
 required: lessons.lander.universe.Point
			Segment(1)=i+1
                                    ^Lander:11: error: type mismatch;
 found   : Array[lessons.lander.universe.Point]
 required: Array[Int]
	return Segment
               ^